--- a/shop-app/package.json
+++ b/shop-app/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
     "vue": "^3.2.47",
