--- a/gatewar-server/src/main/resources/application-dev.yml
+++ b/gatewar-server/src/main/resources/application-dev.yml
@@ -9,7 +9,20 @@ eureka:
 spring:
   application:
     name: gatewat-server
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+          
 gateway:
   uri:
     product-service: http://localhost:8087/
     cart-service: http://localhost:8088/
+    
+    
+
+    
+    
+
+
