--- a/gatewar-server/src/main/resources/application-prod.yml
+++ b/gatewar-server/src/main/resources/application-prod.yml
@@ -9,6 +9,11 @@ eureka:
 spring:
   application:
     name: gatewat-server
+  r2dbc:
+    url: r2dbc:postgresql://postgres:5432/postgres
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
 gateway:
   uri:
     product-service: http://product-service:8087/
