--- a/shop-app/package.json
+++ b/shop-app/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
+    "pinia": "^2.0.36",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
