--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -47,6 +47,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>eureka-server</finalName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
