--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -1,6 +1,11 @@
-FROM openjdk:17
+FROM maven:3.6.3-openjdk-17-slim AS build-stage
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package -Pprod -Dmaven.test.skip
+
+FROM openjdk:17-alpine AS production-stage
 WORKDIR /app
-COPY target/product-service.jar .
+COPY --from=build-stage /home/app/target/product-service.jar .
 ENV PORT=8087
 EXPOSE 8087
 CMD ["java", "-jar","-Dspring.profiles.active=prod", "product-service.jar"]
