--- a/shop-app/package.json
+++ b/shop-app/package.json
@@ -16,6 +16,7 @@
     "@mdi/font": "^7.2.96",
     "axios": "^1.3.4",
     "pinia": "^2.0.36",
+    "vee-validate": "^4.11.6",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6",
     "vuetify": "^3.3.14"
