--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,21 @@ services:
   redis:
     build: ./redis
     image: redis
-    ports:
-      - 6379:6379
+ #   ports:
+ #     - 6379:6379
   cart-service:
     build: ./cart-app
     image: my-golang-app
-    ports:
-      - 8088:8088
+ #   ports:
+ #     - 8088:8088
     depends_on:
       - redis
       - eureka-server
   postgres:
     build: ./postgres
     image: postgres
-    ports:
-      - "5432:5432"
+ #   ports:
+ #     - "5432:5432"
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
@@ -25,8 +25,8 @@ services:
   product-service:
     build: ./product-service
     image: product-service
-    ports:
-      - 8087:8087
+ #   ports:
+ #     - 8087:8087
     depends_on:
       - postgres
       - gatewar-server
